code/style.css
/* CSS RESET */

/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
/*
    2. Remove default margin
  */
* {
  margin: 0;
  font-size: 62.5%;
}
/*
    Typographic tweaks!
    3. Add accessible line-height
    4. Improve text rendering
  */
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  font-family: Barlow, sans-serif;
  background-color: hsla(40, 76%, 98%, 1);
  margin: 2rem 8rem;
}
/*
    5. Improve media defaults
  */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
    6. Remove built-in form typography styles
  */
input,
button,
textarea,
select {
  font: inherit;
}
/*
    7. Avoid text overflows
  */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}
/*
    8. Create a root stacking context
  */
#root,
#__next {
  isolation: isolate;
}

/********************** CONTAINER **********************/

.container {
  max-width: 1440px;
  min-width: 450px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 7rem 67rem 1fr 1fr 1fr 1fr;
  grid-auto-columns: 1fr;
  grid-auto-rows: 1fr;
  grid-auto-flow: row;
  grid-template-areas:
    "navbar"
    "banner"
    "our-collection"
    "why-us"
    "how-it-works"
    "footer";
  width: 100%;
}

/* NAVBAR */

.navbar {
  grid-area: navbar;
  outline: 1px solid red;
  z-index: 10;

  height: 5vh;
}

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav ul {
  list-style: none;
  display: flex;
}

a {
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 12px;
  color: #83888f;
  cursor: pointer;
  margin-left: 33px;
  transition: 0.2s ease-in-out;
}

a:hover {
  color: #333d4b;
  transition: 0.2s ease-in-out;
}

.hamburger,
.mobile-menu {
  display: none;
}

/************ BANNER ************/

.banner {
  grid-area: banner;
  outline: 1px solid green;
  margin: 0 auto;
  position: relative;
}

.banner img {
  width: 100vw;
  height: 50vh;
  /* height: 100%; */
}
img[alt="tablet banner"],
img[alt="mobile banner"] {
  display: none;
}

.banner-content {
  position: absolute;
  top: 0;
  left: 0;
  margin: 8.5rem;
}

.banner-content h2 {
  color: #fefcf7;
  font-family: Fraunces, sans-serif;
  font-size: 7.2rem;
  line-height: 7.2rem; /* 100% */
  width: 55rem;
  /* word-wrap: break-word; */
}

.banner-content p {
  color: #fefcf7;
  font-family: Barlow;
  font-size: 1.6rem;
  line-height: 2.6rem; /* 162.5% */
  width: 40rem;
  margin: 3.2rem 0 5.6rem 0;
}

.banner-content button {
  background-color: hsla(179, 81%, 29%, 1);
  border-radius: 0.6rem;
  border: none;
  padding: 1.5rem 3rem;
  color: #fefcf7;
  text-align: center;
  font-family: Fraunces, sans-serif;
  font-size: 1.8rem;
  line-height: 2.5rem;
  transition: all 0.2s ease-in-out;
}

.banner-content button:hover {
  background: rgba(21, 187, 184, 0.8);
  cursor: pointer;
  transform: scale(1.05);
}

/************ OUR COLLECTION ************/

.our-collection {
  grid-area: our-collection;
  outline: 1px solid blue;
  position: relative;
  margin-top: 15.5rem;
  /* height: 8vh; */
}

.our-collection h3 {
  background: #d9d5d2;
  background: repeating-linear-gradient(to bottom, #d9d5d2 0%, #fefcf7 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  text-align: center;
  font-family: Fraunces, sans-serif;
  font-size: 9.6rem;
  line-height: 72px; /* 48% */
  padding-bottom: 25px;
  /* white-space: nowrap; */
}

.coffee-group {
  position: absolute;
  top: 23rem;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  width: 70%;
}

.coffee-group div {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* margin-right: 5rem; */
}

.coffee-group img {
  width: 20rem;
  margin-bottom: 5rem;
}

.coffee-group h4 {
  color: #333d4b;
  text-align: center;
  font-family: Fraunces, sans-serif;
  text-transform: capitalize;
  font-size: 2.4rem;
  font-style: normal;
  font-weight: 900;
  line-height: 32px; /* 133.333% */
  margin-bottom: 2.4rem;
}

.coffee-group p {
  color: #333d4b;
  text-align: center;
  font-family: Barlow;
  font-size: 1.5rem;
  font-style: normal;
  font-weight: 400;
  line-height: 26px; /* 162.5% */
  width: 90%;
}

/************ WHY CHOOSE US ************/

.why-us {
  grid-area: why-us;
  border-radius: 1rem;
  outline: 1px solid red;
}

.background {
  background-color: #2c343e;
  height: 80%;
}

.why-us h3 {
  color: #fefcf7;
  text-align: center;
  font-family: Fraunces, sans-serif;
  font-size: 40px;
  line-height: 48px; /* 120% */
  margin-top: 10rem;
  margin-bottom: 3rem;
}

.why-us > p {
  color: #fefcf7;
  text-align: center;
  font-family: Barlow;
  font-size: 1.6rem;
  line-height: 2.6rem;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  width: 51rem;
}
.why-us > div {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.why-us div img {
  /* width: 7.2rem; */
  margin: 7.2rem 13.5rem 5.6rem 13.5rem;
}

img[alt="truck"] {
  padding-bottom: 1.5rem;
}

.why-us-content {
  margin-top: 8.6rem;
}

.why-us-content div {
  border-radius: 0.8rem;
  background: #0e8784;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 38.2rem;
}

.why-us-content div h4 {
  color: #fefcf7;
  text-align: center;
  font-family: Fraunces, sans-serif;
  font-size: 2.4rem;
  line-height: 3.2rem; /* 133.333% */
}

.why-us-content div p {
  color: #fefcf7;
  text-align: center;
  font-family: Barlow;
  font-size: 16px;
  line-height: 26px; /* 162.5% */
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  width: 24rem;
  padding-top: 2.4rem;
  padding-bottom: 4.8rem;
}

/************ HOW-IT-WORKS ************/

.how-it-works {
  grid-area: how-it-works;
  outline: 1px solid green;
  margin-top: 20rem;
}

.how-it-works h3 {
  color: #83888f;
  font-family: Fraunces, sans-serif;
  font-size: 2.4rem;
  line-height: 3.2rem; /* 133.333% */
}

.how-it-works-bar {
  border-bottom: 2px solid #fdd6ba;
  height: 1.5rem;
  display: flex;
  justify-content: space-between;
  width: 60vw;
  margin: 8rem 0 6.5rem 0;
}

.circle {
  display: inline-block;
  background: #fff;
  width: 3rem;
  height: 3rem;
  border: 2px solid #0e8784;
  border-radius: 2.5rem;
  box-shadow: 0 0 0 0.5rem #fff;
}

.how-it-works-content {
  display: flex;
}

.how-it-works div:nth-of-type(1),
.how-it-works div:nth-of-type(2) {
  margin-right: 9.5rem;
}

.how-it-works-content div p:first-of-type {
  color: #fdd6ba;
  font-family: Fraunces, sans-serif;
  font-size: 7.2rem;
  line-height: 7.2rem; /* 100% */
  margin: 3.8rem 0 4.2rem 0;
}

.how-it-works-content div h4 {
  color: #333d4b;
  font-family: Fraunces, sans-serif;
  font-size: 3.2rem;
  line-height: 3.6rem; /* 112.5% */
  width: 25rem;
}

.how-it-works-content div p:last-of-type {
  color: #333d4b;
  font-family: Barlow, sans-serif;
  font-size: 1.6rem;
  line-height: 2.6rem; /* 162.5% */
  width: 28.5rem;
  margin-top: 4.2rem;
}

.how-it-works-button {
  color: #fefcf7;
  text-align: center;
  font-family: Fraunces, sans-serif;
  font-size: 1.8rem;
  line-height: 2.5rem; /* 138.889% */
  border-radius: 6px;
  border: none;
  background: #0e8784;
  width: 22rem;
  padding: 1.5rem 3rem;
  margin-top: 6.4rem;
  transition: all 0.2s ease-in-out;
}

.how-it-works-button:hover {
  background: rgba(21, 187, 184, 0.8);
  cursor: pointer;
  transform: scale(1.05);
}

.footer {
  grid-area: footer;
}

/********************** MEDIA QUERY TABLET **********************/

@media screen and (max-width: 960px) {
  body {
    margin: 2rem 4rem;
  }

  .container {
    grid-template-rows: 7rem 66rem 118rem 1fr 1fr 1fr;
  }

  /* .banner img {
    height: 59vh;
  } */

  img[alt="desktop banner"],
  img[alt="mobile banner"] {
    display: none;
  }

  img[alt="tablet banner"] {
    display: block;
  }

  .banner-content {
    margin: 15rem 0 0 10rem;
  }

  .banner-content h2 {
    font-size: 4.8rem;
    line-height: 4.8rem;
    width: 43rem;
  }

  .banner-content p {
    font-size: 1.5rem;
    line-height: 2.5rem;
  }

  .coffee-group {
    flex-direction: column;
    align-items: center;
    top: 50rem;
    height: 64vh;
    width: 70%;
  }

  .coffee-group div {
    flex-direction: row;
    justify-content: center;
    /* width: 90%; */
  }

  .coffee-group img {
    padding-top: 1rem;
  }

  .coffee-group > div > div {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-left: 7rem;
    margin-bottom: 5rem;
  }

  .coffee-group h4 {
    white-space: nowrap;
  }

  .coffee-group p {
    /* width: 100%; */
  }

  .why-us > div {
    flex-direction: column;
  }

  .why-us div img {
    margin: 6.2rem 7rem;
  }

  .why-us-content div {
    flex-direction: row;
    margin-bottom: 2.4rem;
    height: 100%;
  }

  .why-us-content div div {
    display: flex;
    flex-direction: column;
    outline: 1px solid blue;
    margin: 4rem 4.8rem 0 0;
  }

  .how-it-works-bar {
    height: 2.5rem;
  }
  .circle {
    width: 5rem;
    height: 5rem;
  }
}

/********************** MEDIA QUERY MOBILE **********************/

@media screen and (max-width: 580px) {
  body {
    margin: 2rem 2.5rem;
  }

  .container {
    grid-template-rows: 7rem 66rem 160rem 1fr 1fr 1fr;
  }

  nav ul {
    display: none;
  }

  .hamburger,
  .mobile-menu {
    display: block;
  }

  .hamburger {
    cursor: pointer;
  }

  .mobile-menu {
    background: rgba(255, 255, 255, 0.9);
    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
    backdrop-filter: blur(4px);
    -webkit-backdrop-filter: blur(4px);
    border-radius: 10px;
    border-radius: 10px;
    position: fixed;
    top: 0;
    right: 0;
    transform: translateX(100%);
    opacity: 0;
    width: 100vw;
    height: 100vh;
    padding: 38px;
    transition: all 0.25s ease-in-out;
    z-index: 50;
  }

  .mobile-menu.open {
    transform: translateX(0);
    opacity: 1;
  }

  .close-btn {
    position: absolute;
    top: 40px;
    right: 25px;
    z-index: 100;
    cursor: pointer;
  }

  .sidebar-list {
    padding: 0;
  }

  .sidebar-list li {
    list-style: none;
    text-align: center;
    margin-top: 80px;
    margin-bottom: 32px;
  }

  .sidebar-list a {
    color: hsla(216, 20%, 25%, 1);
    font-family: Fraunces, sans-serif;
    font-size: 24px;
    font-weight: 900;
    line-height: 32px;
    margin: 0;
    transition: 0.2s ease-in-out;
  }

  .sidebar-list a:hover {
    color: hsla(215, 5%, 54%, 1);
    transition: 0.2s ease-in-out;
  }

  .banner {
    display: flex;
    justify-content: center;
  }

  .banner img {
    /* height: 20rem; */
    width: 100vw;
  }

  .banner-content {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    margin: 0;
    text-align: center;
  }

  .coffee-group {
    /* top: 73rem; */
    margin-top: -4rem;
    outline: 1px solid red;
  }

  .coffee-group img {
    margin-bottom: 2rem;
  }

  .our-collection {
    margin-top: 13rem;
  }

  .our-collection h3 {
    font-size: 8rem;
    white-space: nowrap;
  }

  .coffee-group div {
    flex-direction: column;
  }

  .coffee-group > div > div {
    align-items: center;
    margin-left: 0;
  }

  .background {
    height: 65%;
  }

  .why-us h3 {
    margin-top: 6rem;
  }

  .why-us > p {
    padding: 0 9rem;
  }

  .why-us-content {
    margin-top: 6rem;
  }

  .why-us div img {
    margin: 3rem 5rem;
  }

  .why-us-content div div {
    margin: 3rem 4rem 0 0;
  }
}

